# databases

./: .editorconfig  .gitignore  README.md
C#/EntityFramework/: .editorconfig  EntityFramework.csproj  Program.cs
C#/LINQtoDB/: LINQtoDB.csproj
C++/: .editorconfig  .gitignore
C++/sqlite-orm/: CMakeLists.txt  Readme.md
C++/sqlite-orm/.devcontainer/: Dockerfile  devcontainer.json
C++/sqlite-orm/src/: main.cxx  storage.hpp
C++/sqlite-orm/src/models/: department.hpp  employee.hpp  person.hpp
CSharp/EntityFramework/: EntityFramework.csproj  db.bd
CSharp/LINQtoDB/: LINQtoDB.csproj  Program.cs  db.bd
Clojure/: .editorconfig
Clojure/Toucan/: .gitignore  Readme.md
CoffeeScript/: .gitignore
CoffeeScript/MikroORM/: package-lock.json  package.json
CoffeeScript/TypeORM/: package-lock.json  package.json
Dart/orm/: .gitignore  README.md  package-lock.json  pubspec.yaml
Elixir/: .editorconfig
Elixir/ecto/: mix.exs
F#/: .gitignore
Go/: .gitignore
Groovy/: .gitignore
Java/: .gitignore
Kotlin/: .editorconfig
Lua/: .editorconfig
Python/Peewee/: main.py  pyproject.toml  storage.py
Python/Peewee/.devcontainer/: devcontainer.json
Python/Peewee/models/: base_model.py  department.py  employee.py  person.py
Python/SQLAlchemy/: pyproject.toml
Python/SQLAlchemy/.devcontainer/: devcontainer.json  post_create.sh
Python/SQLAlchemy/src/: entity.py  exceptions.py  main.py
Python/SQLAlchemy/src/models/: department.py  employee.py  person.py
Python/SQLAlchemy/src/models/enums/: position.py
Python/SQLAlchemy/src/models/types/: guid.py
R/: .editorconfig
Rust/Diesel/: .env  Cargo.toml
Rust/Diesel/.devcontainer/: after_create.sh  devcontainer.json
Rust/Diesel/migrations/2023-08-21-202535_initial/: down.sql  up.sql
Rust/Diesel/src/: main.rs  schema.rs  storage.rs
Rust/Diesel/src/models/: department.rs  employee.rs  person.rs
Scala/: .editorconfig
Swift/: .gitignore
TypeScript/: .gitignore
(+280 files in other folders)
