[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["Vitaliy Artemov <olivera507224@yandex.ru>"]
license = "The Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
peewee = "^3.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
