[tool.poetry]
name = "sqlalchemy_example"
version = "0.1.0"
description = ""
authors = ["Vitaliy Artemov <olivera507224@yandex.ru>"]
license = "The Unlicense"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.39"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
