[package]
name = "diesel_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15"
uuid = { version = "1.4.1", features = ["v4"] }
